apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: paperless.home.hgpe.dev
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: paperless.home.hgpe.dev
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - paperless.home.hgpe.dev
  rules:
    - host: paperless.home.hgpe.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8000
